updated copy of RWA overview

--- a/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
+++ b/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
@@ -1,6 +1,6 @@
 # Cypress Real World App Overview
 
-[The Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app) is an application created by the Cypress team that demonstrates real-world usage of Cypress testing methods, patterns, and workflows. Essentially, this application is a [Venmo](https://venmo.com/) clone. It allows users to sign up for an account, add a bank account and send/receive money between friends.
+[The Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app) is an application created by the Cypress team that demonstrates real-world usage of Cypress testing methods, patterns, and workflows. The RWA is a [Venmo](https://venmo.com/) clone that allows users to sign up for an account, add a bank account and send/receive money between friends.
 
 Throughout this section, we will be using this application to learn a whole host of new Cypress features, testing strategies, and best practices. Before we begin, however, you must clone this repo down onto your machine to get everything set up and working correctly. We have made this process as painless and straightforward as possible.
 
