updated url to new version of faker.js

--- a/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
+++ b/content/courses/advanced-cypress-concepts/database-initialization-and-seeding.mdx
@@ -99,9 +99,9 @@ This method involves using a SQL dump or an export from one of your databases an
 
 ## Creating database seeds with factory scripts
 
-There are many different libraries available to generate dummy test data. [Faker.js](https://www.npmjs.com/package/faker) is a popular library for Node.
+There are many different libraries available to generate dummy test data. [Faker.js](https://www.npmjs.com/package/@faker-js/faker) is a popular library for Node.
 
-Here is an example script for generating fake users with [Faker](https://www.npmjs.com/package/faker).
+Here is an example script for generating fake users with [Faker](https://www.npmjs.com/package/@faker-js/faker).
 
 ```js
 // generateSeedUsers.js
