installed remark admonitions and added styles from docusaurus for them

--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -18,7 +18,11 @@ Next, you will need to open the repo in your text editor. We will be using [VS C
 
 ## Install
 
-> Node version 14 or higher is required.
+:::important
+
+Node version 14 or higher is required.
+
+:::
 
 This project uses [Yarn](https://yarnpkg.com/) to manage dependencies. If you do not have [Yarn](https://yarnpkg.com/), you can install it with this command:
 
