added the remark admonitions plugin to all lesson pages

--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -44,7 +44,11 @@ yarn install
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-09-17_at_10.13.32_AM.png)
 
-> If you are having trouble seeing the screenshots, you can click on them to open a larger image.
+:::tip
+
+If you are having trouble seeing the screenshots, you can click on them to open a larger image.
+
+:::
 
 Start the app:
 
