--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -10,7 +10,7 @@ By the way, did you know that Cypress natively imports [Lodash](https://lodash.c
 const { _ } = Cypress // importing lodash
 
 _.each(feedViews, (feed, feedName) => {
-      it(`paginates ${feedName} transaction feed`, function () {
+      it(`paginates ${feedName} transaction feed`, () => {
         cy.getBySelLike(feed.tab)
           .click()
           .should("have.class", "Mui-selected")
@@ -36,7 +36,7 @@ const people = ["moe", "curly", "larry"]
 // Use method from lodash to get a person to use in a comment
 const transactions = [{ id: 1 }]
 _.each(transaction,
-it("comments on a transaction", function () {
+it("comments on a transaction", () => {
     cy.getBySelLike("transaction-item").first().click();
     cy.wait("@getTransaction");
 
