--- a/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
+++ b/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Authentication Overview & Setup](/real-world-examples/authentication-overview-and-setup) lesson first.
 
 ```js
-it("should allow a visitor to sign-up, login, and logout", function () {
+it("should allow a visitor to sign-up, login, and logout", () => {
   const userInfo = {
     firstName: "Bob",
     lastName: "Ross",
