--- a/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
+++ b/content/real-world-examples/new-transactions/submitting-a-payment-to-another-user.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [New Transaction Overview & Setup](/real-world-examples/new-transaction-overview-and-setup) lesson first.
 
 ```js
-it("navigates to the new transaction form, selects a user and submits a transaction payment", function () {
+it("navigates to the new transaction form, selects a user and submits a transaction payment", () => {
     const payment = {
       amount: "35",
       description: "Sushi dinner 🍣",
