--- a/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
+++ b/content/real-world-examples/user-settings/user-settings-overview-and-setup.mdx
@@ -9,7 +9,7 @@ Let's breakdown what is happening within the `beforeEach()` as it is important t
 ## beforeEach()
 
 ```js
-beforeEach(function () {
+beforeEach(() => {
   cy.task("db:seed")
 
   cy.intercept("PATCH", "/users/*").as("updateUser")
