--- a/content/real-world-examples/authentication/authentication-overview-and-setup.mdx
+++ b/content/real-world-examples/authentication/authentication-overview-and-setup.mdx
@@ -7,7 +7,7 @@ Let's break down what is happening within the `beforeEach()` as it is important 
 ## beforeEach()
 
 ```js
-beforeEach(function () {
+beforeEach(() => {
   cy.task("db:seed")
 
   cy.intercept("POST", "/users").as("signup")
