--- a/content/real-world-examples/authentication/invalid-users.mdx
+++ b/content/real-world-examples/authentication/invalid-users.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Authentication Overview & Setup](/real-world-examples/authentication-overview-and-setup) lesson first.
 
 ```js
-it("should error for an invalid user", function () {
+it("should error for an invalid user", () => {
   cy.login("invalidUserName", "invalidPa$$word")
 
   cy.getBySel("signin-error")
