--- a/content/real-world-examples/bank-accounts/bank-accounts-overview-and-setup.mdx
+++ b/content/real-world-examples/bank-accounts/bank-accounts-overview-and-setup.mdx
@@ -7,7 +7,7 @@ Let's break down what is happening within the `beforeEach()` as it is essential 
 ## beforeEach()
 
 ```js
-beforeEach(function () {
+beforeEach(() => {
   cy.task("db:seed")
 
   cy.intercept("GET", "/notifications").as("getNotifications")
