--- a/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
+++ b/content/real-world-examples/new-transactions/new-transaction-overview-and-setup.mdx
@@ -7,10 +7,10 @@ Let's breakdown what is happening within the `beforeEach()` as it is important t
 ## beforeEach()
 
 ```js
-describe("New Transaction", function () {
+describe("New Transaction", () => {
   const ctx: NewTransactionTestCtx = {};
 
-  beforeEach(function () {
+  beforeEach(() => {
     cy.task("db:seed");
 
     cy.intercept("GET", "/users*").as("allUsers");
