--- a/content/real-world-examples/notifications/notifications-between-several-users.mdx
+++ b/content/real-world-examples/notifications/notifications-between-several-users.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Notifications Overview & Setup](/real-world-examples/notifications-overview-and-setup) lesson first.
 
 ```js
-it("User C comments on a transaction between User A and User B; User A and B get notifications that User C commented on their transaction", function () {
+it("User C comments on a transaction between User A and User B; User A and B get notifications that User C commented on their transaction", () => {
   cy.loginByXstate(ctx.userC.username)
 
   cy.database("find", "transactions", {
