--- a/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
+++ b/content/real-world-examples/transaction-view/comments-on-a-transaction.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
-it("comments on a transaction", function () {
+it("comments on a transaction", () => {
   cy.getBySelLike("transaction-item").first().click()
   cy.wait("@getTransaction")
 
