--- a/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
+++ b/content/real-world-examples/transaction-view/does-not-display-accept-reject-buttons-on-completed-request.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
-it("does not display accept/reject buttons on completed request", function () {
+it("does not display accept/reject buttons on completed request", () => {
     cy.database("find", "transactions", {
       receiverId: ctx.authenticatedUser!.id,
       status: "complete",
