--- a/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
+++ b/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
@@ -9,7 +9,7 @@ Let's break down what is happening within the `beforeEach()` as it is important 
 ```js
 const ctx: NewTransactionCtx = {}
 
-beforeEach(function () {
+beforeEach(() => {
   cy.task("db:seed")
 
   cy.intercept("GET", "/transactions*").as("personalTransactions")
