--- a/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
+++ b/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
@@ -3,7 +3,7 @@
 Before continuing, make sure you have read the [Transaction View Overview & Setup](/real-world-examples/transaction-view-overview-and-setup) lesson first.
 
 ```js
-it("transactions navigation tabs are hidden on a transaction view page", function () {
+it("transactions navigation tabs are hidden on a transaction view page", () => {
   cy.getBySelLike("transaction-item").first().click()
   cy.location("pathname").should("include", "/transaction")
   cy.getBySel("nav-transaction-tabs").should("not.exist")
