--- a/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
+++ b/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
@@ -38,7 +38,7 @@ beforeEach(() => {
 
 In this example, we intercept any **GET** request to any route that matches **/transactions/public\***. We are doing this in a `beforeEach()`, which means this intercept will run before every test.
 
-Later on, In one of our tests, we use <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept and override this same **GET** and route but using a [fixture](https://docs.cypress.io/guides/guides/network-requests#Fixtures) to mock the response.
+Later on, in one of our tests, we use <apiLink apiName="intercept" displayName="cy.intercept()" /> to intercept and override this same **GET** and route but using a [fixture](https://docs.cypress.io/guides/guides/network-requests#Fixtures) to mock the response.
 
 ```js
 cy.intercept("GET", "/transactions/public*", {
