updated all seo

--- a/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
+++ b/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
@@ -1,4 +1,4 @@
-# Building the right Cypress Commands
+# Building Cypress Commands
 
 [Cypress commands](https://docs.cypress.io/api/cypress-api/custom-commands) allow you to create custom functionality and even overwrite existing commands. Having this flexibility is incredibly convenient and powerful, but developers often struggle with when to write custom commands. A helpful thing to think about when you should write your custom command is _when your test code forces you to do so_. What exactly does this mean?
 
