--- a/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
+++ b/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
@@ -1,6 +1,6 @@
 # Intercepting Network Requests
 
-Knowing how to test network requests and responses is important for every web application. In this lesson you will learn how to use <apiLink apiName="intercept" displayName="cy.intercept()" /> to manipulate and test network requests and responses.
+Knowing how to test network (http) requests and responses is important for every web application. In this lesson you will learn how to use <apiLink apiName="intercept" displayName="cy.intercept()" /> to manipulate and test network requests and responses.
 
 ### Intercepting Server Requests
 
