--- a/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
@@ -4,7 +4,7 @@ In the lesson [Database Initialization & Seeding](/advanced-cypress-concepts/dat
 
 ## What are Data-Driven Tests?
 
-When we speak of "Data-Driven Tests," we refer to using variables, fixtures, or data from a database to construct all aspects of a test (UI interactions, expectations, and the test itself).
+When we speak of "Data-Driven Tests," we refer to using variables, fixtures, or data from a database to construct all aspects of a dynamic test (UI interactions, expectations, and the test itself).
 
 For example, let's say you have a test which tests the login form in your app. You could hard code the data, like so:
 
