--- a/content/courses/testing-foundations/knowing-what-to-test.mdx
+++ b/content/courses/testing-foundations/knowing-what-to-test.mdx
@@ -1,4 +1,4 @@
-# Knowing What to Test
+# Identifying What to Test
 
 One of the most difficult challenges when first learning how to write tests is understanding what you should be testing. If you already have a large application in production without any tests, how would you write tests for it? While each application is unique with its own set of features, functionality, technical debt, etc., here are some ways to help you determine what to test.
 
