--- a/content/courses/testing-foundations/testing-is-a-mindset.mdx
+++ b/content/courses/testing-foundations/testing-is-a-mindset.mdx
@@ -1,4 +1,4 @@
-# Testing is a Mindset
+# Understanding the Testing Mindset
 
 It is critical to understand that testing is a mindset before we go any further. Testing methodologies, tools, frameworks, etc. are irrelevant if you first do not understand that testing is first and foremost, a mindset.
 
