--- a/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
+++ b/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
@@ -1,8 +1,8 @@
-# Running Cypress in CI
+# Running Cypress in Continuous Integration (CI)
 
 One of Cypress's most essential and powerful use cases is having it run in your CI/CD pipeline. This way, every time you make a change to your codebase, your CI Pipeline will automatically run all of your Cypress tests to ensure that nothing has broken in your application. We have extensive documentation on using Cypress in CI and how to integrate it with various CI providers.
 
-### What is Continuous Integration(CI)
+### What is Continuous Integration (CI)
 
 <iframe
   width="560"
